listing all appointments of a specific hospital
