# docs/swagger.json
@@ -727,6 +727,31 @@
                 }
             }
         },
+        "/appointment/getAppointmentsOfAHospital/{hospitalId}": {
+            "get": {
+                "summary": "find appointments of one hospital",
+                "description": "Find all appointments of a specific hospital by the id of the hospital in the appointment database",
+                "tags": [
+                    "Appointment"
+                ],
+                "parameters": [
+                    {
+                        "in":"path",
+                        "name":"hospital id",
+                        "description": "ID of the appointments of the hospital to be found",
+                        "required": true,
+                        "schema": {
+                          "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success"
+                    }
+                }
+            }
+        },
         "/appointment/appointments/{id}/confirm": {
             "put": {
                 "summary": "confirm the appointment",
